--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
+    "braces": "^3.0.2",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.8",
     "mysql2": "^1.6.5",
